--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -15,10 +15,14 @@
 <ul>
   <% @country.cities.each do |city| %>
     <li>
-      <%= link_to city.name, city_path(city) %>
+      <%= link_to city.name, country_city_path(city.country, city) %>
     </li>
   <% end %>
 </ul>
+
+<p>
+  <%= link_to "View all Cities for #{@country.name}", country_cities_path(@country) %>
+</p>
 
 <hr>
 
