--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,9 +1,13 @@
 <h1>All Cities</h1>
 
+<% flash.each do |name, message| %>
+  <%= content_tag :div, message %>
+<% end %>
+
 <ul>
   <% @cities.each do |city| %>
     <li>
-      <%= link_to city.name, city_path(city) %>
+      <%= link_to city.name, country_city_path(city.country, city) %>
     </li>
   <% end %>
 </ul>
